yoo update